--- a/MathObjects.UI.Widgets/MathObjects.UI.Widgets.csproj
+++ b/MathObjects.UI.Widgets/MathObjects.UI.Widgets.csproj
@@ -78,5 +78,13 @@
       <Project>{DBF1DFB8-00DA-4DA3-AC10-B2ED595BD298}</Project>
       <Name>MathObjects.UI.Mediator</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
+      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
+      <Name>MathObjects.Framework.Registry</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
