--- a/MathObjects.Framework.Registry/MathObjects.Framework.Registry.csproj
+++ b/MathObjects.Framework.Registry/MathObjects.Framework.Registry.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4AFB86A7-5672-48A6-94CA-DE42958C64A0}</ProjectGuid>
+    <ProjectGuid>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MathObjects.Plugin.Integers</RootNamespace>
-    <AssemblyName>MathObjects.Plugin.Integers</AssemblyName>
+    <RootNamespace>MathObjects.Framework.Registry</RootNamespace>
+    <AssemblyName>MathObjects.Framework.Registry</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,24 +32,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Add.cs" />
-    <Compile Include="MathObject.cs" />
-    <Compile Include="Multiplication.cs" />
-    <Compile Include="Plugin.cs" />
+    <Compile Include="FactoryRegistry.cs" />
+    <Compile Include="IHasInit.cs" />
+    <Compile Include="IMathObjectMeta.cs" />
+    <Compile Include="IMathOperationMeta.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
-      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
-      <Name>MathObjects.Core.Plugin</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
       <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
       <Name>MathObjects.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
-      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
-      <Name>MathObjects.Framework.Registry</Name>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
