--- a/MathObjects.UI.Mediator/MathObjects.UI.Mediator.csproj
+++ b/MathObjects.UI.Mediator/MathObjects.UI.Mediator.csproj
@@ -80,5 +80,9 @@
       <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
       <Name>MathObjects.Core.Plugin</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
+      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
+      <Name>MathObjects.Framework.Registry</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
