--- a/MathObjects.Framework.Registry/MathObjects.Framework.Registry.csproj
+++ b/MathObjects.Framework.Registry/MathObjects.Framework.Registry.csproj
@@ -36,6 +36,7 @@
     <Compile Include="IHasInit.cs" />
     <Compile Include="IMathObjectMeta.cs" />
     <Compile Include="IMathOperationMeta.cs" />
+    <Compile Include="PluginRegistry.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
