--- a/MathObjects.Plugin.Integers/MathObjects.Plugin.Integers.csproj
+++ b/MathObjects.Plugin.Integers/MathObjects.Plugin.Integers.csproj
@@ -36,6 +36,7 @@
     <Compile Include="MathObject.cs" />
     <Compile Include="Multiplication.cs" />
     <Compile Include="Plugin.cs" />
+    <Compile Include="Gcd.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
