--- a/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
+++ b/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</ProjectGuid>
+    <ProjectGuid>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MathObjects.Framework</RootNamespace>
-    <AssemblyName>MathObjects.Framework</AssemblyName>
+    <RootNamespace>MathObjects.Plugin.Symmetric</RootNamespace>
+    <AssemblyName>MathObjects.Plugin.Symmetric</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,23 +32,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IMathObject.cs" />
-    <Compile Include="IMathObjectFactory.cs" />
-    <Compile Include="IBinaryOperation.cs" />
-    <Compile Include="IMathOperationFactory.cs" />
-    <Compile Include="IMathOperation.cs" />
-    <Compile Include="IMathOperationFactory2.cs" />
-    <Compile Include="IHasValue.cs" />
-    <Compile Include="IHasDisplayValue.cs" />
-    <Compile Include="Tuple.cs" />
-    <Compile Include="IHasTuple.cs" />
-    <Compile Include="IHasOutput.cs" />
-    <Compile Include="IHasName.cs" />
-    <Compile Include="IHasMatrix.cs" />
-    <Compile Include="IHasParseValue.cs" />
+    <Compile Include="MathObject.cs" />
+    <Compile Include="Plugin.cs" />
+    <Compile Include="PermutationMatix.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
+      <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
+      <Name>MathObjects.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
+      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
+      <Name>MathObjects.Framework.Registry</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Core.Matrix\MathObjects.Core.Matrix.csproj">
       <Project>{6CE715BF-C2F7-4078-98D0-3B6F605B6AC9}</Project>
       <Name>MathObjects.Core.Matrix</Name>
