--- a/MathObjects.Plugin.Symmetric.Tests/MathObjects.Plugin.Symmetric.Tests.csproj
+++ b/MathObjects.Plugin.Symmetric.Tests/MathObjects.Plugin.Symmetric.Tests.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</ProjectGuid>
+    <ProjectGuid>{BFF2F1EE-9188-41A1-B447-84154FDC216E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MathObjects.Plugin.Symmetric</RootNamespace>
-    <AssemblyName>MathObjects.Plugin.Symmetric</AssemblyName>
+    <RootNamespace>MathObjects.Plugin.Symmetric.Tests</RootNamespace>
+    <AssemblyName>MathObjects.Plugin.Symmetric.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,23 +29,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MathObject.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="PermutationMatix.cs" />
-    <Compile Include="Compose.cs" />
-    <Compile Include="Inverse.cs" />
-    <Compile Include="InverseObject.cs" />
-    <Compile Include="GenInverse.cs" />
-    <Compile Include="IntegerMatrixUtils.cs" />
-    <Compile Include="CycleNotationParser.cs" />
-    <Compile Include="CycleNotationGenerator.cs" />
-    <Compile Include="PermutationMatixEx.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MathObjects.Core.Matrix\MathObjects.Core.Matrix.csproj">
+      <Project>{6CE715BF-C2F7-4078-98D0-3B6F605B6AC9}</Project>
+      <Name>MathObjects.Core.Matrix</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
       <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
       <Name>MathObjects.Core.Plugin</Name>
@@ -54,13 +53,13 @@
       <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
       <Name>MathObjects.Framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Plugin.Symmetric\MathObjects.Plugin.Symmetric.csproj">
+      <Project>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</Project>
+      <Name>MathObjects.Plugin.Symmetric</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Core.Matrix\MathObjects.Core.Matrix.csproj">
-      <Project>{6CE715BF-C2F7-4078-98D0-3B6F605B6AC9}</Project>
-      <Name>MathObjects.Core.Matrix</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
