--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>MathObjects.Plugin.Symmetric</RootNamespace>
-    <AssemblyName>MathObjects.Plugin.Symmetric</AssemblyName>
+    <ProjectGuid>{FDAC34AA-CAD0-4550-96A1-ADB90E53638A}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Test</RootNamespace>
+    <AssemblyName>Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -17,7 +17,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -25,27 +25,21 @@
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MathObject.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="PermutationMatix.cs" />
-    <Compile Include="Compose.cs" />
-    <Compile Include="Inverse.cs" />
-    <Compile Include="InverseObject.cs" />
-    <Compile Include="GenInverse.cs" />
-    <Compile Include="IntegerMatrixUtils.cs" />
-    <Compile Include="CycleNotationParser.cs" />
-    <Compile Include="CycleNotationGenerator.cs" />
-    <Compile Include="PermutationMatixEx.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\MathObjects.Core.Matrix\MathObjects.Core.Matrix.csproj">
+      <Project>{6CE715BF-C2F7-4078-98D0-3B6F605B6AC9}</Project>
+      <Name>MathObjects.Core.Matrix</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
       <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
       <Name>MathObjects.Core.Plugin</Name>
@@ -58,9 +52,9 @@
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Core.Matrix\MathObjects.Core.Matrix.csproj">
-      <Project>{6CE715BF-C2F7-4078-98D0-3B6F605B6AC9}</Project>
-      <Name>MathObjects.Core.Matrix</Name>
+    <ProjectReference Include="..\MathObjects.Plugin.Symmetric\MathObjects.Plugin.Symmetric.csproj">
+      <Project>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</Project>
+      <Name>MathObjects.Plugin.Symmetric</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
