--- a/MathObjects.Core.Matrix.Permutation.Tests/MathObjects.Core.Matrix.Permutation.Tests.csproj
+++ b/MathObjects.Core.Matrix.Permutation.Tests/MathObjects.Core.Matrix.Permutation.Tests.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="Test.cs" />
     <Compile Include="PermutationMatixTest.cs" />
+    <Compile Include="CycleListTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
