--- a/MathObjects.Plugin.Symmetric.Parser/MathObjects.Plugin.Symmetric.Parser.csproj
+++ b/MathObjects.Plugin.Symmetric.Parser/MathObjects.Plugin.Symmetric.Parser.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDAC34AA-CAD0-4550-96A1-ADB90E53638A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <ProjectGuid>{B176A931-13B9-441F-97F1-6003D1ADDEC4}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>MathObjects.Plugin.Symmetric.Parser</RootNamespace>
+    <AssemblyName>MathObjects.Plugin.Symmetric.Parser</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -17,7 +17,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -25,7 +25,7 @@
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -34,34 +34,37 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PermutationBaseListener.cs" />
+    <Compile Include="PermutationLexer.cs" />
+    <Compile Include="PermutationListener.cs" />
+    <Compile Include="PermutationParser.cs" />
+    <Compile Include="PermutationBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="gen.sh" />
+    <None Include="Permutation.g4" />
+    <None Include="Permutation.tokens" />
+    <None Include="PermutationLexer.tokens" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathObjects.Core.Matrix\MathObjects.Core.Matrix.csproj">
       <Project>{6CE715BF-C2F7-4078-98D0-3B6F605B6AC9}</Project>
       <Name>MathObjects.Core.Matrix</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
-      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
-      <Name>MathObjects.Core.Plugin</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
-      <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
-      <Name>MathObjects.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
-      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
-      <Name>MathObjects.Framework.Registry</Name>
+    <ProjectReference Include="..\MathObjects.Core.Matrix.Permutation\MathObjects.Core.Matrix.Permutation.csproj">
+      <Project>{13457E87-8AB4-494B-BF43-51B262F954D8}</Project>
+      <Name>MathObjects.Core.Matrix.Permutation</Name>
     </ProjectReference>
     <ProjectReference Include="..\MathObjects.Plugin.Symmetric\MathObjects.Plugin.Symmetric.csproj">
       <Project>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</Project>
       <Name>MathObjects.Plugin.Symmetric</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Core.Matrix.Permutation\MathObjects.Core.Matrix.Permutation.csproj">
-      <Project>{13457E87-8AB4-494B-BF43-51B262F954D8}</Project>
-      <Name>MathObjects.Core.Matrix.Permutation</Name>
+    <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
+      <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
+      <Name>MathObjects.Framework</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
