--- a/MathObjects.UI/MathObjects.UI.csproj
+++ b/MathObjects.UI/MathObjects.UI.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FieldWidget.cs" />
     <Compile Include="gtk-gui\MathObjects.UI.FieldWidget.cs" />
+    <Compile Include="ErrorWidget.cs" />
+    <Compile Include="gtk-gui\MathObjects.UI.ErrorWidget.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
