--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -32,6 +32,33 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Plugin.cs" />
+    <Compile Include="MathObject.cs" />
+    <Compile Include="Add.cs" />
+    <Compile Include="Multiply.cs" />
+    <Compile Include="MathObjectEx.cs" />
+    <Compile Include="AddObject.cs" />
+    <Compile Include="MultiplyObject.cs" />
+    <Compile Include="Divide.cs" />
+    <Compile Include="DivideObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Parser\MathObjects.Core.Parser.csproj">
+      <Project>{F7F1F412-02F8-438E-A3AB-C5C347B2CCEF}</Project>
+      <Name>MathObjects.Core.Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
+      <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
+      <Name>MathObjects.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
+      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
+      <Name>MathObjects.Framework.Registry</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
