--- a/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
+++ b/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
@@ -34,6 +34,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IParser.cs" />
     <Compile Include="IMathObjectStack.cs" />
+    <Compile Include="ErrorObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
