--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -18,6 +18,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <NoWarn>3021</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -54,6 +55,11 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Subtract.cs" />
     <Compile Include="SubtractObject.cs" />
+    <Compile Include="FunctionObject.cs" />
+    <Compile Include="ArrayObject.cs" />
+    <Compile Include="ConstantObject.cs" />
+    <Compile Include="ConstantObjectFactory.cs" />
+    <Compile Include="TopFunction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
