--- a/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
+++ b/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
@@ -18,6 +18,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <NoWarn>3021</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
