--- a/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
+++ b/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Parser\PermutationListener.cs" />
     <Compile Include="Parser\PermutationParser.cs" />
     <Compile Include="ErrorListener.cs" />
+    <Compile Include="IHasMatrix.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
