--- a/MathObjects.Framework/MathObjects.Framework.csproj
+++ b/MathObjects.Framework/MathObjects.Framework.csproj
@@ -34,14 +34,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IMathObject.cs" />
     <Compile Include="IMathObjectFactory.cs" />
-    <Compile Include="IMathOperationFactory.cs" />
     <Compile Include="IMathOperation.cs" />
-    <Compile Include="IMathOperationFactory2.cs" />
     <Compile Include="IHasDisplayValue.cs" />
     <Compile Include="IHasOutput.cs" />
     <Compile Include="IHasName.cs" />
     <Compile Include="ErrorHandler.cs" />
     <Compile Include="IMathBinaryOperation.cs" />
+    <Compile Include="IMathBinaryOperationFactory.cs" />
+    <Compile Include="IMathOperationFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
