--- a/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
+++ b/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
@@ -35,16 +35,13 @@
     <Compile Include="IParser.cs" />
     <Compile Include="IMathObjectStack.cs" />
     <Compile Include="ErrorObject.cs" />
+    <Compile Include="IHasParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
       <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
       <Name>MathObjects.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Framework.Registry\MathObjects.Framework.Registry.csproj">
-      <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
-      <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
