--- a/MathObjects.Framework/MathObjects.Framework.csproj
+++ b/MathObjects.Framework/MathObjects.Framework.csproj
@@ -42,6 +42,11 @@
     <Compile Include="IMathBinaryOperation.cs" />
     <Compile Include="IMathBinaryOperationFactory.cs" />
     <Compile Include="IMathOperationFactory.cs" />
+    <Compile Include="IMathObjectFactoryContext.cs" />
+    <Compile Include="ArrayObject.cs" />
+    <Compile Include="FactoryContext.cs" />
+    <Compile Include="IMathFunction.cs" />
+    <Compile Include="IMathFunctionContext.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
