--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -67,6 +67,8 @@
     <Compile Include="CosineObject.cs" />
     <Compile Include="NegativeObject.cs" />
     <Compile Include="Negative.cs" />
+    <Compile Include="TopObject.cs" />
+    <Compile Include="TopOperation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
