--- a/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
+++ b/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
@@ -29,6 +29,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Antlr4.Runtime">
+      <HintPath>Lib\Antlr4.Runtime.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -37,6 +40,12 @@
     <Compile Include="ErrorObject.cs" />
     <Compile Include="IHasParser.cs" />
     <Compile Include="IHasMathObjectStack.cs" />
+    <Compile Include="IHasChildren.cs" />
+    <Compile Include="BinaryOperationWrapper.cs" />
+    <Compile Include="OperationWrapper.cs" />
+    <Compile Include="MathObjectStack.cs" />
+    <Compile Include="MathObjectStackArgs.cs" />
+    <Compile Include="ParserErrorListener.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -44,5 +53,11 @@
       <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
       <Name>MathObjects.Framework</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lib\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lib\Antlr4.Runtime.dll" />
   </ItemGroup>
 </Project>
