--- a/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
+++ b/MathObjects.Plugin.Symmetric/MathObjects.Plugin.Symmetric.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Parser\PermutationVisitor.cs" />
     <Compile Include="Parser\EvalVisitor2.cs" />
     <Compile Include="Parser\Parser2.cs" />
+    <Compile Include="MathObjectEx.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
