--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -55,13 +55,17 @@
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Plugin.Symmetric\MathObjects.Plugin.Symmetric.csproj">
-      <Project>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</Project>
-      <Name>MathObjects.Plugin.Symmetric</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Core.Matrix.Permutation\MathObjects.Core.Matrix.Permutation.csproj">
       <Project>{13457E87-8AB4-494B-BF43-51B262F954D8}</Project>
       <Name>MathObjects.Core.Matrix.Permutation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework.Parser\MathObjects.Framework.Parser.csproj">
+      <Project>{5A8DC1C0-6298-49DD-9B02-36EBB0F6C70D}</Project>
+      <Name>MathObjects.Framework.Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Plugin.FloatingPoint\MathObjects.Plugin.FloatingPoint.csproj">
+      <Project>{BFFB8F5D-939D-41CD-B8F9-527241AAB31C}</Project>
+      <Name>MathObjects.Plugin.FloatingPoint</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
