--- a/MathObjects.Plugin.FloatingPoint.Tests/MathObjects.Plugin.FloatingPoint.Tests.csproj
+++ b/MathObjects.Plugin.FloatingPoint.Tests/MathObjects.Plugin.FloatingPoint.Tests.csproj
@@ -17,7 +17,8 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
+    <Commandlineparameters>--profile=log:coverage</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -30,13 +31,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathObjects.Core.Parser\MathObjects.Core.Parser.csproj">
       <Project>{F7F1F412-02F8-438E-A3AB-C5C347B2CCEF}</Project>
@@ -65,5 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ParserTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
